--- a/scss/style.css
+++ b/scss/style.css
@@ -62,6 +62,11 @@ h2.sp-line-under::after{
     border-bottom-right-radius: 10px;
 
 }
+.dropdown-icon{
+    position: absolute;
+    left: 50%;
+    transform: translate(-50%);
+}
 .dropdown-menu.mw-5{
     min-width: initial;
     font-size: 0.8rem;
@@ -73,12 +78,13 @@ h2.sp-line-under::after{
     border-radius: 40px;
     text-decoration: none;
     line-height: normal;
+    width: fit-content;
 }
 header{
     font-size: 0.7rem;
 }
 .sp-text-sm{
-    font-size: 0.8rem;
+    font-size: small;
 }
 .sp-text-md{
     font-size: 1rem;
@@ -108,8 +114,9 @@ a.nav-link.active {
 }
 
 .vertical-bar{
-    height: 70vh;
-    max-height:518px;
+    min-height: 300px;
+    height: 80vh;
+    max-height:700px;
     width: 20px;
     background-color: #ce0033;
     float: left;
@@ -119,14 +126,19 @@ a.nav-link.active {
 
     /* border: 1px solid; */
     position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    margin-left: 0;
     /* left: -4vw; */
     /* padding: 10px 20px; */
-    margin-left: 0;
 }
-.menu p:hover{
+.menu p:hover, .menu p.active{
     color: #ce0033;
     background: #fff;
     transition: 0.4s;
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+
+
 }
 .menu p{
     background-color: #ce0033;
@@ -137,11 +149,16 @@ a.nav-link.active {
     text-transform: uppercase;
     width: -moz-fit-content;
     width: fit-content;
+    font-size: x-small;
 }
-.menu p:hover span{
-    background-color: #fff;
+.menu p:hover span, .menu p.active span{
+    /* background-color: #fff;
     border-color:#ce0033 ;
-    transition: 0.4s;
+    transition: 0.4s; */
+    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+    box-shadow: 0 0 4px 0px #000;
+    border-width: 2px;
+    
 }
 .menu p> span{
     width: 30px;
@@ -171,6 +188,7 @@ path.cls-1:hover{
         top: 50%;
         transform: translate(-50%, -50%);
         height: 10px;
+        min-height: 0;
         width: 100%;
         background-color: #ce0033;
         float: none;
@@ -190,7 +208,7 @@ path.cls-1:hover{
         text-transform: uppercase;
         width: -moz-fit-content;
         width: fit-content;
-        font-size:0.6rem;
+        font-size:x-small;
         border-radius: 4px;
     }
     .menu p> span {
@@ -263,6 +281,8 @@ path.cls-1:hover{
 }
 .sp-footer img{
     margin: 0 auto;
+    width: 80%;
+    max-width: 150px;
 }
 .sp-footer .icons i{
     font-size: large;
@@ -315,4 +335,38 @@ path.cls-1:hover{
     color: #fc7e58;
     transition: 0.5s;
     transform:scale(1.1);
+}
+@media screen and (min-width: 768px){
+    .sp-row-cols-md-3{
+        display: grid;
+        display: -ms-grid;
+        grid-template-columns: repeat(3,minmax(30%, 300px));
+        -ms-grid-template-columns: repeat(3,minmax(30%, 300px));
+        grid-column-gap: 3%;
+        
+    }
+    .row.sp-gutter-x-0{
+        --bs-gutter-x:0 !important;
+        mar
+    }
+    .sp-row-cols-md-3 .col{ 
+    grid-column: span 1;
+    /* margin: 0 auto; */
+        
+    }
+    
+}
+svg.dropdown{
+    position: absolute;
+    bottom: -30px;
+    left: 50%;
+    transform: translateX(-50%);
+}
+.card-header.emailing{
+    position: relative;
+}
+.logo-partenaire{
+    width: 50%;
+    max-width: 100px;
+    height: auto;
 }
