--- a/scss/style.css
+++ b/scss/style.css
@@ -1,156 +1,192 @@
 @font-face {
-    font-family: 'Nunito Sans';
-    src: url('../formations/font/Nunito_Sans/NunitoSans-Regular.ttf') format('ttf');
+    font-family: "Nunito Sans";
+    src: url("../formations/font/Nunito_Sans/NunitoSans-Regular.ttf") format("ttf");
     font-weight: normal;
     font-style: normal;
 }
-@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap');
-*{
+
+@import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap");
+* {
     box-sizing: border-box;
 }
-body{
-    font-family: 'Nunito Sans', sans-serif;
-    font-family:"Nunito Sans",sans-serif;
+
+body {
+    font-family: "Nunito Sans", sans-serif;
+    font-family: "Nunito Sans", sans-serif;
     font-size: 0.9rem;
 }
-.sp-input-shadow:focus{
+
+.sp-input-shadow:focus {
     box-shadow: 0 0 0 0.25rem rgb(220 53 69 / 30%);
 }
-.sp-line{
+
+.sp-line {
     height: 3px !important;
-    background:#000 !important;
+    background: #000 !important;
     border-radius: 10px;
     opacity: 1;
     /* color:rgb(206, 0, 51) !important;
-    */
-} 
-h2.sp-line-under{
+      */
+}
+
+h2.sp-line-under {
     position: relative;
     width: -moz-fit-content;
     width: fit-content;
 }
-h2.sp-line-under::after{
+
+h2.sp-line-under::after {
     content: "";
     position: absolute;
     width: 50%;
     height: 4px;
     left: 0;
     top: 105%;
-    background:#000 !important;
-    
+    background: #000 !important;
 }
-.sp-red{
+
+.sp-red {
     color: #ce0033;
 }
-.sp-bg-red{
+
+.sp-bg-red {
     background-color: #ce0033;
 }
+
 .sp-btn-danger {
     color: #fff;
     background-color: #ce0033;
     border: 1px solid #ce0033;
 }
-.sp-btn-danger:hover{
+
+.sp-btn-danger:hover {
     color: #ce0033;
     background-color: #fff;
-    transition:0.4s;
+    transition: 0.4s;
 }
-.sp-rounded-top-15{
+
+.sp-rounded-top-15 {
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
 }
-.sp-rounded-bottom-15{
+
+.sp-rounded-bottom-15 {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-
 }
-.dropdown-icon{
+
+.dropdown-icon {
     position: absolute;
     left: 50%;
     transform: translate(-50%);
 }
-.dropdown-menu.mw-5{
+
+.dropdown-menu.mw-5 {
     min-width: initial;
     font-size: 0.8rem;
 }
-.col.mh-790{
+
+.col.mh-790 {
     min-height: 790px;
 }
-.sp-rounded-link{
+
+.sp-rounded-link {
     border-radius: 40px;
     text-decoration: none;
     line-height: normal;
     width: fit-content;
 }
-header{
+
+header {
     font-size: 0.7rem;
-}
-.sp-text-sm{
-    font-size: small;
-}
-.sp-text-md{
-    font-size: 1rem;
-}
-.navbar-nav .nav-link{
-    color: #000;
 }
 a.nav-link:hover {
     color: #ce0033;
-    transition: .4s;
+    transition: 0.4s;
 }
 a.nav-link.active {
-    border-bottom: 4px solid #ce0033;
     color: #ce0033;
 }
-.left-bloc{
+
+.sp-text-sm {
+    font-size: small;
+}
+
+.sp-text-md {
+    font-size: 1rem;
+}
+
+.navbar-nav .nav-link {
+    color: #000;
+}
+
+
+.left-bloc {
     /* background-color: #E35D6A; */
 }
-.left-bloc,.right-bloc{
+
+.left-bloc, .right-bloc {
     width: 100%;
     position: relative;
 }
-.right-bloc{
-    display:-ms-grid;
-    display:grid;
+
+.right-bloc {
+    display: -ms-grid;
+    display: grid;
 }
+
 .mw-50 {
     max-width: 50% !important;
-  }
-.h-40{
+}
+
+.h-40 {
     height: 40vh;
 }
 
-.vertical-bar{
+.vertical-bar {
     min-height: 300px;
-    height: 80vh;
-    max-height:700px;
-    width: 20px;
+    height: 757px;
+    max-height: 700px;
+    width: 13px;
     background-color: #ce0033;
     float: left;
-    border-radius: 40px;
+    border-radius: 0;
 }
-.menu{
-    
-    /* border: 1px solid; */
+
+.menu {
     position: absolute;
-    top: 50%;
-    transform: translateY(-50%);
+    top: 20%;
     margin-left: 0;
-    /* left: -4vw; */
-    /* padding: 10px 20px; */
 }
-.menu p:hover{
+
+.menu, .secondary-menu {
+    width: 100%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+    margin-left: 0;
+    padding-left: 0;
+    transition: all 2s linear;
+}
+
+.secondary-menu {
+    display: inline-block;
+    z-index: 1000;
+    left: 5%;
+}
+
+.menu p:hover {
     border-color: #ce0033;
 }
-.menu p:hover, .menu p.active{
+
+.menu p:hover, .menu p.active {
     color: #ce0033;
     background: #fff;
     transition: 0.4s;
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
-    
-    
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
 }
-.menu p{
+
+.menu p {
     background-color: #ce0033;
     color: black;
     font-weight: bold;
@@ -161,36 +197,43 @@ a.nav-link.active {
     text-transform: uppercase;
     width: -moz-fit-content;
     width: fit-content;
-    font-size: x-small;
+    font-size: small;
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0) !important;
 }
-.menu p:hover span, .menu p.active span{
-    /* background-color: #fff;
-    border-color:#ce0033 ;
-    transition: 0.4s; */
-    box-shadow: 0 .5rem 1rem rgba(0,0,0,.15)!important;
+
+.menu p:hover span, .menu p.active span {
+    box-shadow: 0 0.5rem 1rem rgba(0, 0, 0, 0.15) !important;
     box-shadow: 0 0 4px 0px #000;
-    border-width: 2px ;
-    
+    border-width: 2px;
 }
-.menu p> span{
+
+.menu p>span {
     width: 30px;
     height: 30px;
     border-radius: 50%;
     border: 1px solid #fff;
-    background-color:#ce0033 ;
+    background-color: #ce0033;
     position: relative;
     left: -15px;
 }
-.menu p> object{
+
+.menu p>object {
     max-width: 100%;
     height: auto;
 }
-path.cls-1:hover{
+
+path.cls-1:hover {
     fill: #ce0033 !important;
 }
 
 @media (max-width: 768px) {
-    .left-bloc{
+    
+    a.nav-link.active {
+        border-bottom: 4px solid #ce0033;
+    }
+
+
+    .left-bloc {
         /* background-color: #E35D6A; */
         border: 1px solid;
     }
@@ -206,7 +249,7 @@ path.cls-1:hover{
         float: none;
         border-radius: 40px;
     }
-    .menu{
+    .menu, .secondary-menu {
         width: 100%;
         margin: 0 auto;
         /* border: 1px solid; */
@@ -215,27 +258,38 @@ path.cls-1:hover{
         justify-content: space-between;
         margin-left: 0;
         padding-left: 0;
+        transition: all 0.2s ease-in;
     }
-    .menu p{
+    .d-none {}
+    .secondary-menu {
+        display: inline-block;
+        z-index: 1000;
+        left: -50%;
+    }
+    .sp-hidden-left {
+        left: 2%;
+        transition: 0.5s ease-out;
+    }
+    .menu p {
         text-transform: uppercase;
         width: -moz-fit-content;
         width: fit-content;
-        font-size:xx-small;
-        border-radius: 4px;
+        font-size: xx-small;
+        /* border-radius: 10px 50px 50px 10px; */
     }
-    .menu p> span {
+    .menu p>span {
         width: 15px;
         height: 15px;
         margin: 0 8px 0px 2px;
         border-radius: 50%;
         left: 0;
     }
-    .menu p:hover , .menu p.active{
-        border:none;
+    .menu p:hover, .menu p.active {
+        border: 1px solid transparent;
         border-left: 5px solid #ce0033;
     }
-    .menu p{
-        border:1px solid transparent;
+    .menu p {
+        border: 1px solid transparent;
         border-left: 5px solid transparent;
     }
     .sp-btn-danger {
@@ -245,72 +299,84 @@ path.cls-1:hover{
         font-size: 0.9rem;
     }
 }
-.sp-footer{
+
+.sp-footer {
     width: 100%;
     min-height: 300px;
     background-image: url(../formations/img/SVG/Footer.svg);
     background-size: cover;
 }
-.sp-footer .col{
+
+.sp-footer .col {
     /* max-width: -moz-fit-content;
-    max-width: fit-content; */
+      max-width: fit-content; */
 }
-.sp-footer .col a{
+
+.sp-footer .col a {
     text-decoration: none;
 }
-.sp-link-light{
-    color: #f8f9fa;
 
+.sp-link-light {
+    color: #f8f9fa;
 }
+
 .sp-link-light:hover, .sp-link-light:focus {
     color: #ce0033;
     transition: 0.4s;
 }
-.sp-input-group{
+
+.sp-input-group {
     display: flex;
 }
-.sp-input-group input, .sp-input-group a{
+
+.sp-input-group input, .sp-input-group a {
     margin: 0;
     border: 0;
-    
     outline: none;
     outline-offset: -2px;
     border-radius: initial;
-    padding:  0.4em 0.6em;
-    
+    padding: 0.4em 0.6em;
 }
-.sp-input-group #email{
+
+.sp-input-group #email {
     border-radius: 4px 0 0 4px;
 }
-.sp-input-group #email:focus, .sp-input-group #email:hover{
+
+.sp-input-group #email:focus, .sp-input-group #email:hover {
     outline: 1px solid #ce0033;
 }
-.sp-input-group #btn-submit{
-    border-radius:  0  4px 4px 0;
+
+.sp-input-group #btn-submit {
+    border-radius: 0 4px 4px 0;
     background-color: #ce0033;
 }
-.sp-input-group #btn-submit:hover{
+
+.sp-input-group #btn-submit:hover {
     background-color: #ce0034e0;
     color: #fff;
-
 }
-.logo-icons{
+
+.logo-icons {
     display: flex;
     flex-direction: column;
     font-size: small;
 }
-.sp-footer img{
+
+.sp-footer img {
     margin: 0 auto;
     width: 80%;
     max-width: 150px;
 }
-.sp-footer .icons i{
+
+.sp-footer .icons i {
     font-size: large;
 }
-.sp-footer .logo-icons{
+
+.sp-footer .logo-icons {
     /* width: fit-content; */
 }
-.sp-footer .icons{
+
+.sp-footer .icons {
     width: 70%;
     margin: 1em auto;
     display: flex;
@@ -318,75 +384,108 @@ path.cls-1:hover{
     justify-content: space-around;
     align-content: flex-start;
 }
-.copyright{
+
+.copyright {
     width: 100%;
-    min-height:50px ;
+    min-height: 50px;
     background-color: #ce0033;
     font-size: small;
 }
-.twitter-color{
-    color: #17A1FA;
+
+.twitter-color {
+    color: #17a1fa;
 }
-.facebook-color{
-    color: #4267B2;
+
+.facebook-color {
+    color: #4267b2;
 }
-.youtube-color{
-    color: #FF0000;
+
+.youtube-color {
+    color: #ff0000;
 }
-.instagram-color{
-    color: #F24E1E;
+
+.instagram-color {
+    color: #f24e1e;
 }
-.twitter-color:hover{
+
+.twitter-color:hover {
     color: #38afff;
     transition: 0.5s;
-    transform:scale(1.1);
+    transform: scale(1.1);
 }
-.facebook-color:hover{
+
+.facebook-color:hover {
     color: #607aad;
     transition: 0.5s;
-    transform:scale(1.1);
+    transform: scale(1.1);
 }
-.youtube-color:hover{
+
+.youtube-color:hover {
     color: #ff4e4e;
     transition: 0.5s;
-    transform:scale(1.1);
+    transform: scale(1.1);
 }
-.instagram-color:hover{
+
+.instagram-color:hover {
     color: #fc7e58;
     transition: 0.5s;
-    transform:scale(1.1);
+    transform: scale(1.1);
 }
-@media screen and (min-width: 768px){
-    .sp-row-cols-md-3{
-        display: grid;
-        display: -ms-grid;
-        grid-template-columns: repeat(3,minmax(30%, 300px));
-        -ms-grid-template-columns: repeat(3,minmax(30%, 300px));
-        grid-column-gap: 3%;
-        
-    }
-    .row.sp-gutter-x-0{
-        --bs-gutter-x:0 !important;
-        mar
-    }
-    .sp-row-cols-md-3 .col{ 
-    grid-column: span 1;
-    /* margin: 0 auto; */
-        
-    }
-    
-}
-svg.dropdown{
-    position: absolute;
-    bottom: -30px;
-    left: 50%;
-    transform: translateX(-50%);
-}
-.card-header.emailing{
+
+li.nav-item a{
     position: relative;
 }
-.logo-partenaire{
-    width: 50%;
-    max-width: 100px;
-    height: auto;
+
+li.nav-item a::after{
+    position: absolute;
+    content: "";
+    top: 160%;
+    height: 5px;
+    left: 50%;
+    transform: translateX(-50%);
+    background: #ce0033;
+    width: 0%;
 }
+
+@media screen and (min-width: 768px) {
+
+
+    li.nav-item a:hover::after, li.nav-item a.active::after {
+        width: 120%;
+        transition: .4s;
+    }
+
+    .sp-row-cols-md-3 {
+        display: grid;
+        display: -ms-grid;
+        grid-template-columns: repeat(3, minmax(30%, 300px));
+        -ms-grid-template-columns: repeat(3, minmax(30%, 300px));
+        grid-column-gap: 6%;
+    }
+    .row.sp-gutter-x-0 {
+        --bs-gutter-x: 0 !important;
+    }
+    .sp-row-cols-md-3 .col {
+        grid-column: span 1;
+        /* margin: 0 auto; */
+    }
+}
+
+    svg.dropdown {
+        position: absolute;
+        bottom: -30px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
+
+    .card-header.emailing {
+        position: relative;
+    }
+
+    .logo-partenaire {
+        width: 50%;
+        max-width: 100px;
+        height: auto;
+    }
+
+    
