Fixed font familly on css

--- a/scss/style.css
+++ b/scss/style.css
@@ -1,9 +1,4 @@
-@font-face {
-    font-family: "Nunito Sans";
-    src: url("../formations/font/Nunito_Sans/NunitoSans-Regular.ttf") format("ttf");
-    font-weight: normal;
-    font-style: normal;
-}
+
 
 @import url("https://fonts.googleapis.com/css2?family=Nunito+Sans:ital,wght@0,200;0,300;0,400;0,600;0,700;0,800;0,900;1,200;1,300;1,400;1,600;1,700;1,800;1,900&display=swap");
 * {
@@ -11,8 +6,7 @@
 }
 
 body {
-    font-family: "Nunito Sans", sans-serif;
-    font-family: "Nunito Sans", sans-serif;
+    font-family: 'Nunito Sans', sans-serif;
     font-size: 0.9rem;
 }
 
@@ -99,6 +93,9 @@ h2.sp-line-under::after {
 
 header {
     font-size: 0.7rem;
+}
+a.nav-link {
+    font-weight: 900;
 }
 a.nav-link:hover {
     color: #ce0033;
