--- a/scss/style.css
+++ b/scss/style.css
@@ -117,25 +117,22 @@ a.nav-link.active {
     color: #000;
 }
 
-.banner {
+figure{
     position: relative;
 }
-.banner::after {
-    position: absolute;
-    content: "formations";
-    top: 50%;
+figcaption{
     /* font-size: 3rem; */
+    width: 100%;
     font-size: 4.5rem;
     font-weight: 800;
     /* background-color: red; */
-    width: 100%;
     text-align: center;
+    top: 50%;
     left: 50%;
-    transform: translate(-50%,-50%);
+    transform: translate(-50%);
     color: #fff;
     text-transform: uppercase;
 }
-
 .left-bloc {
     /* background-color: #E35D6A; */
 }
@@ -248,8 +245,10 @@ img.card-img-top {
 }
 
 @media (max-width: 768px) {
-    .banner::after {
-        font-size: 3rem;
+
+    figcaption{
+        
+        font-size: 2.5rem;
     }
     a.nav-link.active {
         border-bottom: 4px solid #ce0033;
