--- a/formations/css/style.css
+++ b/formations/css/style.css
@@ -279,6 +279,10 @@ img.card-img-top {
 }
 
 @media (max-width: 768px) {
+    
+    img.card-img-top {
+        height: initial;
+    }
     label[for="search"] input{
         width: 100%;
         padding: 10px 16px;
@@ -288,7 +292,7 @@ img.card-img-top {
         font-size: 2.5rem;
     }
     a.nav-link.active {
-        border-bottom: 4px solid #ce0033;
+        border-bottom: none;
     }
 
     .left-bloc {
@@ -318,11 +322,16 @@ img.card-img-top {
         padding-left: 0;
         transition: all 0.2s ease-in;
     }
-    .d-none {}
     .secondary-menu {
         display: inline-block;
         z-index: 1000;
         left: -50%;
+    }
+    .classUnder{
+        z-index: 1001;
+    }
+    .classOn{
+        z-index: 2000;
     }
     .sp-hidden-left {
         left: 2%;
@@ -428,10 +437,6 @@ img.card-img-top {
 
 .sp-footer .icons i {
     font-size: large;
-}
-
-.sp-footer .logo-icons {
-    /* width: fit-content; */
 }
 
 .sp-footer .icons {
